@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Circle {
    }
  }
  

  namespace  {
    class Polygon {
    }
  }
  

  namespace  {
    class Shape {
    }
  }
  

  namespace  {
    class Sort {
        {static} + sortShapes()
    }
  }
  

  namespace  {
    class Square {
    }
  }
  

  Circle -up-|> Shape
  Polygon -up-|> Shape
  Square -up-|> Polygon


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
